# ai-game-sound-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  lefthook.yml  pyproject.toml  railway.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci.yml  labeler.yml  railway-deploy.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md
src/: main.py
src/adapters/: __init__.py
src/adapters/controllers/: __init__.py  audio.py  base.py  tag.py
src/adapters/controllers/audio_generation/: api.py
src/adapters/gateways/: __init__.py  base.py  elevenlabs.py  elevenlabs_sdk.py
src/adapters/mappers/: __init__.py  base.py
src/adapters/presenters/: __init__.py  base.py
src/adapters/repositories/: __init__.py  base.py  music_file_storage.py  prompt_repository.py  tag_repository.py
src/app/: main.py  web_app.py
src/app/components/: tag_selector.py
src/app/config/: settings.py
src/app/static/css/: animations.css  styles.css
src/app/static/js/: animations.js  music-generator.js
src/app/templates/: about.html  base.html  index.html  login.html
src/config/: __init__.py  api_config.py
src/controllers/: __init__.py
src/controllers/streamlit/: __init__.py  generator_controller.py
src/di_container/: __init__.py  bootstrap.py  config.py  container.py  providers.py
src/entities/: __init__.py  audio.py  base.py  exceptions.py  music_generation.py  prompt.py  tag.py  tag_definitions.json  tag_loader.py
src/infrastructure/: database.py  models.py  statistics_repository.py
src/usecases/: __init__.py  base.py
src/usecases/audio_generation/: __init__.py
src/usecases/common/: __init__.py  interfaces.py
src/usecases/music_generation/: async_processor.py  generate_music.py  generation_state_manager.py  parameter_manager.py
src/usecases/prompt_generation/: generate_prompt.py
src/utils/: __init__.py  audio_converter.py  decorators.py  env.py  logger.py  monitoring.py  rate_limiter.py  session_manager.py  types.py  validators.py
tests/: e2e_multi_user_test.py  test_database.py  test_rate_limit.py  test_sample.py
tests/adapters/: __init__.py  test_mapper_base.py  test_repository_base.py
tests/adapters/controllers/: __init__.py  test_audio.py  test_base.py  test_tag.py
tests/adapters/gateways/: __init__.py  test_elevenlabs.py  test_elevenlabs_sdk.py
tests/adapters/repositories/: test_music_file_storage.py  test_prompt_repository.py  test_tag_repository.py
tests/config/: __init__.py  test_api_config.py
tests/di_container/: __init__.py  test_config.py  test_container.py  test_providers.py
tests/entities/: __init__.py  test_audio.py  test_base.py  test_music_generation.py  test_tag_loader.py
tests/integration/: __init__.py  test_elevenlabs_integration.py  test_multi_user.py
tests/usecases/: __init__.py  test_base.py  test_prompt_generation.py
tests/usecases/music_generation/: test_async_processor.py
tests/utils/: __init__.py  test_audio_converter.py  test_decorators.py  test_rate_limiter.py  test_session_manager.py  test_validators.py
